--- a/perwaitC/WebRoot/WEB-INF/web.xml
+++ b/perwaitC/WebRoot/WEB-INF/web.xml
@@ -45,6 +45,24 @@
     <servlet-name>InsertThemeServlet</servlet-name>
     <servlet-class>com.zsz.servlet.InsertThemeServlet</servlet-class>
   </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>checkName</servlet-name>
+    <servlet-class>com.zsz.servlet.checkName</servlet-class>
+  </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>checkLogin</servlet-name>
+    <servlet-class>com.zsz.servlet.checkLogin</servlet-class>
+  </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>CoreServlet</servlet-name>
+    <servlet-class>com.zsz.wechar.CoreServlet</servlet-class>
+  </servlet>
 
 
 
@@ -78,5 +96,20 @@
     <servlet-name>InsertThemeServlet</servlet-name>
     <url-pattern>/InsertThemeServlet</url-pattern>
   </servlet-mapping>
-
+     <servlet-mapping>
+    <servlet-name>checkName</servlet-name>
+    <url-pattern>/checkName</url-pattern>
+  </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>checkLogin</servlet-name>
+    <url-pattern>/checkLogin</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>  
+        <servlet-name>CoreServlet</servlet-name>  
+        <url-pattern>/CoreServlet</url-pattern>  
+    </servlet-mapping>  
+<welcome-file-list>  
+        <welcome-file>index.jsp</welcome-file>  
+    </welcome-file-list>  
+	
 </web-app>
